--- a/style.css
+++ b/style.css
@@ -292,6 +292,63 @@ html {
 }
 
 
+/* Home */
+
+.home .home-content .row {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.home .column-left {
+    width: calc(60% - 5px);
+    padding-right: 20px;
+}
+
+.home .column-right {
+    width: calc(40% - 5px);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.home .left-text h3 {
+    font-size: 28px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.home .left-text p {
+    font-size: 18px;
+    color: #ddd;
+    line-height: 1.6;
+    text-align: justify;
+    margin-bottom: 30px;
+}
+
+.home .left-text a {
+    background: #0fb77c95;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 10px 20px;
+    border-radius: 6px;
+    border: 2px solid #0fb77c95;
+    transition: all 0.3s ease;
+    text-decoration: none;
+}
+
+.home .left-text a:hover {
+    background: none;
+    color: #0fb77c95;
+}
+
+.home .column-right .profile-img {
+    max-width: 100%;
+    border-radius: 50%;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+
 
 /* About-Buttons */
 .white-button {
